# unigw

./: CMakeLists.txt
pkg-explorer/: AUTHORS  CMakeLists.txt  Changelog  INSTALL  README  TODO  todo.txt
pkg-explorer/debian/: README.Debian  changelog  control  copyright  docs
pkg-explorer/documentation/: copyright  index.html
pkg-explorer/package/: CMakeLists.txt  control.info.in  control.runtime.in
pkg-explorer/src/: CMakeLists.txt  DisplayThread.cpp  DisplayThread.h  ImportDialog.cpp  ImportDialog.h  ImportDialog.ui  InitThread.cpp  InitThread.h  InstallDialog.cpp  InstallDialog.h  InstallDialog.ui  InstallThread.cpp  InstallThread.h  LicenseBox.cpp  LicenseBox.h  LicenseBox.ui  LogForm.cpp  LogForm.h  LogForm.ui  LogOutput.cpp  LogOutput.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Manager.cpp  Manager.h  PrefsDialog.cpp  PrefsDialog.h  PrefsDialog.ui  ProcessDialog.cpp  ProcessDialog.h  ProcessDialog.ui  ProcessWindow.h  RemoveDialog.cpp  RemoveDialog.h  RemoveDialog.ui  RemoveThread.cpp  RemoveThread.h  RepoUtils.cpp  RepoUtils.h  (+20 more)
pkg-explorer/src/icons/: m2osw_logo.icns  m2osw_logo.xcf
pkg-explorer/test/systray/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  resources.qrc
pkg-explorer/wpkg/: control.info  copyright
wpkg/: CMakeLists.txt  ChangeLog  INSTALL  INSTALL.txt  NEWS  README  README.md  README.txt  TODO
wpkg/bzip2/: CMakeLists.txt  bzlib.h
wpkg/cmake/: FindCatch.cmake
wpkg/controlled_vars/: CMakeLists.txt  controlled_vars.cpp  controlled_vars.h  controlled_vars_auto_init.h  controlled_vars_exceptions.h  controlled_vars_fauto_init.h  controlled_vars_limited_auto_init.h  controlled_vars_limited_fauto_init.h  controlled_vars_limited_need_init.h  controlled_vars_limited_no_init.h  controlled_vars_need_init.h  controlled_vars_no_init.h  controlled_vars_ptr_auto_init.h  controlled_vars_ptr_need_init.h  controlled_vars_ptr_no_init.h  controlled_vars_static_assert.h  controlled_vars_version.h
wpkg/debian/: README.Debian  README.source  changelog  control  copyright
wpkg/dev/: build  build-debs  build-dist  build-packages  build-win.bat  control-bin.in  coverage  coverage-footer.html  coverage-header.html  create_docs  dist  freebsd  freebsd-toolchain.cmake  inst  mingw32  mingw32-toolchain.cmake  pack  run-unittests-win32  sample.admindir  sendweb  sendwpkg
wpkg/documentation/: CMakeLists.txt  X-Y-dilemma.odg  copyright  gui-package-tree-sample.odg  index.html  manual-see_also.h2m.in  pied-destal-with-alpha-32x32.xcf  scripts.odg  state-chart.ods  wpkg.doxy.in
wpkg/libdebpackages/: CMakeLists.txt  advgetopt.cpp  advgetopt.h  case_insensitive_string.cpp  compatibility.cpp  compatibility.h  comptr.h  debian_packages.h.in  debian_version.cpp  installer_package_item.cpp  libversion.c  md5.cpp  md5.h  memfile.cpp  strptime.c  tcp_client_server.cpp  wpkg_architecture.cpp  wpkg_architecture.h  wpkg_backup.cpp  wpkg_backup.h  wpkg_changelog.cpp  wpkg_control.cpp  wpkg_control.h  wpkg_control_fields.cpp  wpkg_control_file_item.cpp  wpkg_copyright.cpp  wpkg_dependencies.cpp  wpkg_field.cpp  wpkg_filename.cpp  wpkg_filename.h  wpkg_output.cpp  wpkg_stream.cpp  wpkg_util.cpp  wpkgar.cpp  wpkgar.h  wpkgar_block.cpp  wpkgar_block.h  wpkgar_build.cpp  wpkgar_exception.h  wpkgar_install.cpp  (+10 more)
wpkg/libdebpackages/details/: disk.cpp
wpkg/libdebpackages/installer/: CMakeLists.txt  dependencies.cpp  dependencies.h  flags.cpp  flags.h  install_info.cpp  install_info.h  package_item.cpp  package_item.h  package_list.cpp  package_list.h  progress_scope.cpp  progress_scope.h  task.cpp  task.h  tree_generator.cpp  tree_generator.h
wpkg/libdebpackages/libdebpackages/: advgetopt.h  case_insensitive_string.h  compatibility.h  comptr.h  debian_export.h  debian_packages.h.in  debian_version.h  md5.h  memfile.h  tcp_client_server.h  wpkg_architecture.h  wpkg_backup.h  wpkg_changelog.h  wpkg_control.h  wpkg_copyright.h  wpkg_dependencies.h  wpkg_field.h  wpkg_filename.h  wpkg_output.h  wpkg_stream.h  wpkg_util.h  wpkgar.h  wpkgar_block.h  wpkgar_build.h  wpkgar_install.h  wpkgar_remove.h  wpkgar_repository.h  wpkgar_tracker.h
wpkg/libexpr/: CMakeLists.txt  c_expr.cpp  expr.cpp  variable.cpp
wpkg/libexpr/libexpr/: exceptions.h  expr.h.in  expr_export.h  variable.h
wpkg/libtld/: CMakeLists-original.txt  CMakeLists.txt
wpkg/libtld/src/: CMakeLists.txt  tld.c
wpkg/libutf8/: CMakeLists.txt  libutf8.cpp
wpkg/libutf8/libutf8/: libutf8.h  libutf8_export.h
wpkg/package/: CMakeLists.txt  admindb_init.txt  control.development.in  control.documentation.in  control.info.in  control.runtime.in
wpkg/samples/sample1/: Makefile.am  control  prerm
wpkg/samples/sample2/: build-sample
wpkg/tests/: CMakeLists.txt
wpkg/tests/common/: CMakeLists.txt  wpkg_tools.cpp  wpkg_tools.h
wpkg/tests/integrationtests/: CMakeLists.txt  integrationtest_main.cpp  integrationtest_main.h  integrationtest_package.cpp  integrationtest_system.cpp
wpkg/tests/sample1/: build-sample
wpkg/tests/sample2/: Makefile.am  control  preinst
wpkg/tests/sample3/: build-sample  control
wpkg/tests/sample5/: control.info
wpkg/tests/sample7/: README.txt  admindir.control  build.linux
wpkg/tests/unittests/: CMakeLists.txt  unittest_advgetopt.cpp  unittest_advgetopt.h  unittest_architecture.cpp  unittest_architecture.h  unittest_control.cpp  unittest_control.h  unittest_expr.cpp  unittest_expr.h  unittest_installer.cpp  unittest_libutf8.cpp  unittest_libutf8.h  unittest_main.cpp  unittest_main.h  (+10 more)
wpkg/tools/: CMakeLists.txt  dar.cpp  deb2graph.cpp  deb2html.cpp  debversion.cpp  dirsize.cpp  license.cpp  license.h  rc-version.cpp  wpkg.cpp
wpkg/wpkg/: control.info  copyright  libexpr.pc  libutf8.pc  wpkg.pc
wpkg/www/: content.html  debversion.html  dirsize.html  doc_menu.html  documentation.html  download.html  index.html  template.html  unigw.css  usys.html  wpkg.html  wpkg_build.html  wpkg_control.html  wpkg_info.html  wpkg_install.html  wpkg_name.html  wpkg_opts.html  wpkg_remove.html  wpkg_versions.html
wpkg/zlib/: CMakeLists-original.txt  CMakeLists.txt  zconf.h
(+47 files in other folders)
